traefik-basicauth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-admin-auth-secret
